--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   <body>
     <header>
       <nav>
-        <div class="logo"><a href="#hero">SinÁnimo</a></div>
+        <div class="logo"><a href="#hero">UnCambio+</a></div>
         <ul class="nav-links">
           <li><a href="#about">Sobre Nosotros</a></li>
           <li><a href="#programs">Programas</a></li>
